--- a/building_a_complete_web_application_with_nodejs_and_angularjs/package.json
+++ b/building_a_complete_web_application_with_nodejs_and_angularjs/package.json
@@ -9,16 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^0.9.0",
-    "bower": "^1.3.12",
-    "db-migrate": "^0.9.11",
-    "mysql": "^2.6.1",
+    "async": "^2.1.4",
+    "bower": "^1.8.0",
+    "db-migrate": "^0.10.0-beta.20",
+    "mysql": "^2.12.0",
     "node-dbi": "^0.7.1",
     "percolator": "^1.5.0"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5",
-    "request": "^2.54.0",
-    "sqlite3": "^3.0.5"
+    "request": "^2.79.0",
+    "sqlite3": "^3.1.8"
   }
 }
