Final chapter code: fixed db-migrate version, MySQL table truncates.

--- a/building_a_complete_web_application_with_nodejs_and_angularjs/package.json
+++ b/building_a_complete_web_application_with_nodejs_and_angularjs/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "bower": "^1.8.0",
-    "db-migrate": "^0.10.0-beta.20",
+    "db-migrate": "^0.9.26",
     "mysql": "^2.12.0",
     "node-dbi": "^0.7.1",
     "percolator": "^1.5.0"
